k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader-api
  namespace: file-uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader-api
  template:
    metadata:
      labels:
        app: uploader-api
    spec:
      containers:
      - name: uploader-api
        image: kind-registry:5000/uploader-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: uploader-api
  namespace: file-uploader
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: uploader-api
