k8s/file-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
  namespace: file-uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
    spec:
      containers:
      - name: file-service
        image: kind-registry:5000/uploader-file:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: file-service
  namespace: file-uploader
spec:
  ports:
  - port: 3002
    targetPort: 3002
  selector:
    app: file-service
