k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uploader-ingress
  namespace: file-uploader
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/websocket-services: "uploader-api"
spec:
  # tls:
  # - hosts:
  #   - file-uploader-in-dierl.duckdns.org
  #   secretName: uploader-certs-secret
  ingressClassName: nginx 
  rules:
  - host: file-uploader.local
    http:
      paths:
      - path: /api/auth/register
        pathType: Exact
        backend:
          service:
            name: http-error-403  # A service that doesn't exist or returns 403
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: uploader-api
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uploader-frontend
            port:
              number: 80
